fix vectorization issue