@@ -47,8 +47,8 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1")
     jmh("org.openjdk.jmh:jmh-core:1.37")
     jmh("org.openjdk.jmh:jmh-generator-annprocess:1.37")
-    implementation("org.apache.lucene:lucene-core:9.12.2")
-    implementation("org.apache.lucene:lucene-analysis-common:9.12.2")
+    implementation("org.apache.lucene:lucene-core:10.4.0")
+    implementation("org.apache.lucene:lucene-analysis-common:10.4.0")
 
 }
 
@@ -90,6 +90,9 @@ tasks.register<Copy>("processBuildProperties") {
     sourceSets.main.get().output.resourcesDir?.let { into(it) }
 }
 
+tasks.withType<JavaExec> {
+    jvmArgs("--add-modules", "jdk.incubator.vector")
+}
 
 tasks.jar {
     dependsOn("processBuildProperties")
